--- a/package.json
+++ b/package.json
@@ -2,16 +2,24 @@
   "name": "postman-to-api",
   "version": "1.0.0",
   "description": "CLI tool to generate API service files from Postman collections",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "bin": {
-    "postman-to-api": "./bin/cli.js"
+    "postman-to-api": "dist/bin/cli.js"
   },
+  "files": [
+    "dist/**/*",
+    "README.md",
+    "LICENSE"
+  ],
   "scripts": {
     "build": "tsc",
     "dev": "ts-node bin/cli.ts",
     "test": "jest",
     "lint": "eslint . --ext .ts,.js",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "prepublishOnly": "npm run build",
+    "prepack": "npm run build"
   },
   "keywords": [
     "postman",
@@ -19,10 +27,21 @@
     "cli",
     "codegen",
     "typescript",
-    "javascript"
+    "javascript",
+    "axios",
+    "fetch",
+    "api-client"
   ],
-  "author": "",
+  "author": "Karan <ansh.tsx@gmail.com>",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Anshkaran7/postman-to-api.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Anshkaran7/postman-to-api/issues"
+  },
+  "homepage": "https://github.com/Anshkaran7/postman-to-api#readme",
   "dependencies": {
     "chalk": "^5.3.0",
     "commander": "^11.1.0",
